--- a/app/themes/commongood/views/main.html
+++ b/app/themes/commongood/views/main.html
@@ -1,10 +1,10 @@
-<div class="row">
-	<div class="grid">
+<div class="row ">
+	<div class="grid grid--full">
 		<div class="spinner" ng-hide="ready"></div>
 		<vimeo-video playing="playing"></vimeo-video>
 	</div>
 </div>
-<div class="row">
+<div class="row row--dashed ">
 	<div class="grid">
 		<div ng-repeat="video in videos " class="palm-one-half lap-one-third desk-one-quarter soft--bottom grid__item" >
 			<a class="work-block" scroll-on-click ng-href="/?v={{video.slug}}" ng-click="playVideo(video)">
