--- a/app/themes/commongood/views/directive-vimeo-video.html
+++ b/app/themes/commongood/views/directive-vimeo-video.html
@@ -4,20 +4,24 @@
 	</div>
 	<div class="grid grid--full row--dashed row--dashed--meta">
 		<div class="soft--top soft--bottom grid video__meta">
-			<div class="grid__item one-quarter palm-one-half">
+			<div class="grid__item one-fifth palm-one-half">
 				<h3 class="flush--bottom" ng-bind-html="playing.title" ></h3>
 			</div><!--
-			--><div class="grid__item one-quarter palm-one-half">
+			--><div class="grid__item one-fifth palm-one-half">
 				<span  class="gamma soft-half--right" ng-show="playing.post_meta.agency">Agency</span> 
 				<span ng-bind-html="playing.post_meta.agency"></span>
 			</div><!--
-			--><div class="grid__item one-quarter palm-one-half">
+			--><div class="grid__item one-fifth palm-one-half">
 				<span  class="gamma soft-half--right" ng-show="playing.post_meta.director">Director</span> 
 				<span ng-bind-html="playing.post_meta.director"></span>
 			</div><!--
-			--><div class="grid__item one-quarter palm-one-half">
+			--><div class="grid__item one-fifth palm-one-half">
 				<span  class="gamma soft-half--right" ng-show="playing.post_meta.client">Client</span> 
 				<span ng-bind-html="playing.post_meta.client"></span>
+			</div>
+			<!--
+			--><div class="grid__item one-fifth palm-one-half">
+				<div class="fb-share-button" data-href="http://commongood.tv/?v={{video.slug}}" property="og:image" src="{{video.featured_image.attachment_meta.sizes.medium.url}}" data-type="button">Share</div>
 			</div>
 		</div>	
 	</div>	
