share link take 2

--- a/app/themes/commongood/views/directive-vimeo-video.html
+++ b/app/themes/commongood/views/directive-vimeo-video.html
@@ -21,7 +21,8 @@
 			</div>
 			<!--
 			--><div class="grid__item one-fifth palm-one-half">
-				<div class="fb-share-button" data-href="http://commongood.tv/?v={{video.slug}}" property="og:image" src="{{video.featured_image.attachment_meta.sizes.medium.url}}" data-type="button">Share</div>
+			<!-- Facebook -->
+			<a href="http://www.facebook.com/sharer.php?u=http://commongood.tv/?v={{video.slug}}" target="_blank"><img src="{{video.featured_image.attachment_meta.sizes.medium.url}}" alt="Facebook" />Share</a>
 			</div>
 		</div>	
 	</div>	
