project scr as href?

--- a/app/themes/commongood/views/directive-vimeo-video.html
+++ b/app/themes/commongood/views/directive-vimeo-video.html
@@ -22,7 +22,7 @@
 			<!--
 			--><div class="grid__item one-fifth palm-one-half">
 			<!-- Facebook -->
-			<a href="<?php echo get_field('share_link') ?>" property="og:image" content="<?php echo get_field('thumbnail') ?>" target="_blank">Share</a>
+			<a href="http://www.facebook.com/sharer.php?u=http://commongood.tv/?v={{video.slug}}" property="og:image" content="{{video.featured_image.attachment_meta.sizes.medium.url}}" target="_blank">Share</a>
 			</div>
 		</div>	
 	</div>	
