--- a/app/themes/commongood/views/directive-vimeo-video.html
+++ b/app/themes/commongood/views/directive-vimeo-video.html
@@ -22,7 +22,7 @@
 			<!--
 			--><div class="grid__item one-fifth palm-one-half">
 			<!-- Facebook -->
-			<a href="http://www.facebook.com/sharer.php?u=http://commongood.cartogram.ca/?v=airtransat-holidays" property="og:image" content="http://b.vimeocdn.com/ts/454/174/454174623_640.jpg" target="_blank">Share</a>
+			<a href="http://www.facebook.com/sharer.php?u=http://commongood.cartogram.ca/?v=airtransat-holidays&t=Customized Project Title&p[images][0]=http://b.vimeocdn.com/ts/454/174/454174623_640.jpg" property="og:image" content="http://b.vimeocdn.com/ts/454/174/454174623_640.jpg" target="_blank">Share</a>
 			</div>
 		</div>	
 	</div>	
