better spaning for share

--- a/app/themes/commongood/views/directive-vimeo-video.html
+++ b/app/themes/commongood/views/directive-vimeo-video.html
@@ -4,25 +4,25 @@
 	</div>
 	<div class="grid grid--full row--dashed row--dashed--meta">
 		<div class="soft--top soft--bottom grid video__meta">
-			<div class="grid__item one-fifth palm-one-half">
+			<div class="grid__item one-quarter palm-one-half">
 				<h3 class="flush--bottom" ng-bind-html="playing.title" ></h3>
 			</div><!--
-			--><div class="grid__item one-fifth palm-one-half">
+			--><div class="grid__item one-quarter palm-one-half">
 				<span  class="gamma soft-half--right" ng-show="playing.post_meta.agency">Agency</span> 
 				<span ng-bind-html="playing.post_meta.agency"></span>
 			</div><!--
-			--><div class="grid__item one-fifth palm-one-half">
+			--><div class="grid__item one-quarter palm-one-half">
 				<span  class="gamma soft-half--right" ng-show="playing.post_meta.director">Director</span> 
 				<span ng-bind-html="playing.post_meta.director"></span>
 			</div><!--
-			--><div class="grid__item one-fifth palm-one-half">
+			--><div class="grid__item one-quarter palm-one-half">
 				<span  class="gamma soft-half--right" ng-show="playing.post_meta.client">Client</span> 
 				<span ng-bind-html="playing.post_meta.client"></span>
 			</div>
 			<!--
-			--><div class="grid__item one-fifth palm-one-half">
+			--><div class="grid__item one-quarter palm-one-half">
 			<!-- Facebook -->
-			<a href="http://www.facebook.com/sharer.php?s=100&p[url]=http://commongood.tv/?v=airtransat-holidays&p[images][0]=http://b.vimeocdn.com/ts/454/174/454174623_640.jpg&&p[title]=Air Transat Holiday&p[summary]=Video for Air transat lorem ipsum description" class="btn btn-primary" target="_blank">Share</a>
+			<a href="http://www.facebook.com/sharer.php?s=100&p[url]=http://commongood.tv/?v=airtransat-holidays&p[images][0]=http://b.vimeocdn.com/ts/454/174/454174623_640.jpg&&p[title]=Air Transat Holiday&p[summary]=Video for Air transat lorem ipsum description" class="btn btn-primary" target="_blank">Share on Facebook</a>
 			</div>
 		</div>	
 	</div>	
