added share values
Signed-off-by: Matthew Seccafien <matt@studiocartogram.com>

--- a/app/themes/commongood/views/directive-vimeo-video.html
+++ b/app/themes/commongood/views/directive-vimeo-video.html
@@ -22,7 +22,7 @@
 			<!--
 			--><div class="grid__item one-quarter palm-one-half">
 			<!-- Facebook -->
-			<a href="http://www.facebook.com/sharer.php?s=100&p[url]=http://commongood.tv/?v=airtransat-holidays&p[images][0]=http://b.vimeocdn.com/ts/454/174/454174623_640.jpg&&p[title]=Air Transat Holiday&p[summary]=Video for Air transat lorem ipsum description" class="btn btn-primary" target="_blank">Share on Facebook</a>
+			<a href="http://www.facebook.com/sharer.php?s=100&p[url]=http://commongood.tv/?v=airtransat-holidays&p[images][0]=http://b.vimeocdn.com/ts/454/174/454174623_640.jpg&&p[title]={{playing.title}}&p[summary]={{playing.post_meta.client}}" class="btn btn-primary" target="_blank">Share on Facebook {{playing.title}}</a>
 			</div>
 		</div>	
 	</div>	
