--- a/app/themes/commongood/views/directive-vimeo-video.html
+++ b/app/themes/commongood/views/directive-vimeo-video.html
@@ -22,11 +22,11 @@
 			<!--
 			--><div class="grid__item one-whole palm-one-half">
 			<!-- Facebook -->
-			<a href="http://www.facebook.com/sharer.php?s=100&p[url]=http://commongood.tv/?v={{playing.slug}}&p[images][0]={{playing.post_meta.thumbnail[0]}}&&p[title]={{playing.title}}&p[summary]={{playing.post_meta.client[0]}}" class="btn btn-primary" target="_blank">
+			<!-- <a href="http://www.facebook.com/sharer.php?s=100&p[url]=http://commongood.tv/?v={{playing.slug}}&p[images][0]={{playing.post_meta.thumbnail[0]}}&&p[title]={{playing.title}}&p[summary]={{playing.post_meta.client[0]}}" class="btn btn-primary" target="_blank">
 			Share on Facebook : {{ playing.post_meta.client[0] }}</a>
 			<pre>http://www.facebook.com/sharer.php?s=100&p[url]=http://commongood.tv/?v={{playing.slug}}&p[images][0]={{playing.post_meta.thumbnail[0]}}&&p[title]={{playing.title}}&p[summary]={{playing.post_meta.client[0]}}</pre>
-
-			<a href="http://www.facebook.com/sharer.php?s=100&p[url]=http://commongood.tv/?v=airtransat-holidays&p[images][0]=http://b.vimeocdn.com/ts/454/174/454174623_640.jpg&&p[title]=Air Transat Holiday&p[summary]=Video for Air transat lorem ipsum description" class="btn btn-primary" target="_blank">Fiona on Facebook</a>
+ -->
+			<a href="http://www.facebook.com/sharer.php?s=100&p[url]=http://commongood.tv/?v=airtransat-holidays&p[images][0]=http://b.vimeocdn.com/ts/454/174/454174623_640.jpg&p[title]=Air Transat Holiday&p[summary]=Video for Air transat lorem ipsum description" class="btn btn-primary" target="_blank">Fiona on Facebook</a>
 
 			</div>
 		</div>	
