--- a/app/themes/commongood/views/directive-vimeo-video.html
+++ b/app/themes/commongood/views/directive-vimeo-video.html
@@ -26,7 +26,7 @@
 			Share on Facebook : {{ playing.post_meta.client[0] }}</a>
 			<pre>http://www.facebook.com/sharer.php?s=100&p[url]=http://commongood.tv/?v={{playing.slug}}&p[images][0]={{playing.post_meta.thumbnail[0]}}&&p[title]={{playing.title}}&p[summary]={{playing.post_meta.client[0]}}</pre>
  -->
-			<a href="https://www.facebook.com/sharer.php?s=100&p[url]=http://commongood.tv/?v=airtransat-holidays&p[images][0]=http://b.vimeocdn.com/ts/454/174/454174623_640.jpg&&p[title]=Air Transat Holiday&p[summary]=Video for Air transat lorem ipsum description" class="btn btn-primary" target="_blank">Fiona on Facebook</a>
+			<!-- <a href="https://www.facebook.com/sharer.php?s=100&p[url]=http://commongood.tv/?v=airtransat-holidays&p[images][0]=http://b.vimeocdn.com/ts/454/174/454174623_640.jpg&&p[title]=Air Transat Holiday&p[summary]=Video for Air transat lorem ipsum description" class="btn btn-primary" target="_blank">Fiona on Facebook</a> -->
 
 			<a href="https://www.facebook.com/dialog/feed?
   app_id=729898417042523
@@ -34,15 +34,6 @@
   &link=https%3A%2F%2Fcommongood.tv%2F?v=airtransat-holidays
   &redirect_uri=https://commongood.tv
   &picture=http%3A%2F%2Fb.vimeocdn.com%2Fts%2F454%2F174%2F454174623_640.jpg">Share with feed</a>
-
-  <div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_GB/all.js#xfbml=1&appId=729898417042523";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
 
 			</div>
 		</div>	
