--- a/app/themes/commongood/views/directive-vimeo-video.html
+++ b/app/themes/commongood/views/directive-vimeo-video.html
@@ -30,7 +30,10 @@
 
 			<a href="https://www.facebook.com/dialog/feed?
   app_id=729898417042523
-  &display=popup&caption=Title%20goes%20here 
+  &display=popup
+  &name=Video%20Title%20
+  &caption=Video%20Caption%20 
+  &description=Video%20description%20domething%20more 
   &link=https%3A%2F%2Fcommongood.tv%2F?v=airtransat-holidays
   &redirect_uri=https://commongood.tv
   &picture=http%3A%2F%2Fb.vimeocdn.com%2Fts%2F454%2F174%2F454174623_640.jpg">Share with feed</a>
