--- a/app/themes/commongood/views/directive-vimeo-video.html
+++ b/app/themes/commongood/views/directive-vimeo-video.html
@@ -30,7 +30,7 @@
 
 			<a href="https://www.facebook.com/dialog/feed?
   app_id=729898417042523
-  &display=popup
+  &display=page
   &name=Video%20Title%20
   &caption=Video%20Caption%20
   &description=Video%20description%20domething%20more
