--- a/app/themes/commongood/views/directive-vimeo-video.html
+++ b/app/themes/commongood/views/directive-vimeo-video.html
@@ -29,7 +29,7 @@
 			<!-- <a href="https://www.facebook.com/sharer.php?s=100&p[url]=http://commongood.tv/?v=airtransat-holidays&p[images][0]=http://b.vimeocdn.com/ts/454/174/454174623_640.jpg&&p[title]=Air Transat Holiday&p[summary]=Video for Air transat lorem ipsum description" class="btn btn-primary" target="_blank">Fiona on Facebook</a> -->
 
 			<a href="https://www.facebook.com/dialog/feed?
-  app_id=729898417042523&display=popup&caption=Video%20Caption%20&name={{playing.title}}&description=Video%20description%20domething%20more&link=https%3A%2F%2Fcommongood.tv%2F?v=airtransat-holidays&redirect_uri=https://commongood.tv&picture=http%3A%2F%2Fb.vimeocdn.com%2Fts%2F454%2F174%2F454174623_640.jpg">Share with feed</a>
+  app_id=729898417042523&display=popup&caption=Common%20Good&name={{playing.title}}&description=Client:%20{{playing.post_meta.client[0]}}%20Director:%20{{playing.post_meta.director[0]}}%20Agency:%20{{playing.post_meta.agency[0]}}&link=https%3A%2F%2Fcommongood.tv%2F?v={{playing.slug}}&redirect_uri=https://commongood.tv/?v={{playing.slug}}&picture={{playing.post_meta.thumbnail[0]}}">Share with feed</a>
 
 			</div>
 		</div>	
