--- a/app/themes/commongood/views/directive-vimeo-video.html
+++ b/app/themes/commongood/views/directive-vimeo-video.html
@@ -23,7 +23,7 @@
 			--><div class="grid__item one-whole palm-one-half">
 			<!-- Facebook -->
 			<a href="https://www.facebook.com/dialog/feed?
-  app_id=729898417042523&display=popup&caption=Common%20Good&name={{playing.title}}&description=Client:%20{{playing.post_meta.client[0]}},%20Director:%20{{playing.post_meta.director[0]}},%20Agency:%20{{playing.post_meta.agency[0]}}&link=https%3A%2F%2Fcommongood.tv%2F?v={{playing.slug}}&redirect_uri=https://commongood.tv/?v={{playing.slug}}&picture={{playing.post_meta.thumbnail[0]}}">Share on Facebook</a>
+  app_id=729898417042523&display=popup&caption=Common%20Good&name={{playing.title}}&description=Client:%20{{playing.post_meta.client[0]}},%20Director:%20{{playing.post_meta.director[0]}},%20Agency:%20{{playing.post_meta.agency[0]}}&link=https%3A%2F%2Fcommongood.tv%2F?v={{playing.slug}}&redirect_uri=https%3A%2F%2Fcommongood.tv%2F?v={{playing.slug}}&picture={{playing.post_meta.thumbnail[0]}}">Share on Facebook</a>
 
 			</div>
 		</div>	
