weird quotes in the bell share link are breaking it

--- a/app/themes/commongood/views/directive-vimeo-video.html
+++ b/app/themes/commongood/views/directive-vimeo-video.html
@@ -25,6 +25,16 @@
 			<a href="https://www.facebook.com/dialog/feed?
   app_id=729898417042523&display=popup&caption=Common%20Good&name={{playing.title}}&description=Client:%20{{playing.post_meta.client[0]}},%20Director:%20{{playing.post_meta.director[0]}},%20Agency:%20{{playing.post_meta.agency[0]}}&link=https%3A%2F%2Fcommongood.tv%2F?v={{playing.slug}}&redirect_uri=https%3A%2F%2Fcommongood.tv%2F?v={{playing.slug}}&picture={{playing.post_meta.thumbnail[0]}}">Share on Facebook</a>
 
+
+
+<!--   BAD
+
+  https://www.facebook.com/dialog/feed?%20%20app_id=729898417042523&display=popup&caption=Common%20Good&name=Bell%20&#8220;Larger Faster Better&#8221;&description=Client:%20Bell,%20Director:%20Common Good,%20Agency:%20Zulu Alpha Kilo&link=https%3A%2F%2Fcommongood.tv%2F?v=bell-larger-faster-better&redirect_uri=https%3A%2F%2Fcommongood.tv%2F?v=bell-larger-faster-better&picture=http://b.vimeocdn.com/ts/464/939/464939661_1280.jpg
+
+
+Good
+   https://www.facebook.com/dialog/feed?%20%20app_id=729898417042523&display=popup&caption=Common%20Good&name=Bell%20%E2%80%9CLarger Faster Better%E2%80%9D&description=Client:%20Bell,%20Director:%20Common Good,%20Agency:%20Zulu Alpha Kilo&link=https%3A%2F%2Fcommongood.tv%2F?v=bell-larger-faster-better&redirect_uri=https%3A%2F%2Fcommongood.tv%2F?v=bell-larger-faster-better&picture=http://b.vimeocdn.com/ts/464/939/464939661_1280.jpg -->
+
 			</div>
 		</div>	
 	</div>	
