--- a/app/themes/commongood/views/studio.html
+++ b/app/themes/commongood/views/studio.html
@@ -1,10 +1,11 @@
 <div class="row">
 	<div class="grid">
 		<div class="one-whole soft--bottom grid__item">
-			<img src="/app/themes/commongood/dist/images/studio.jpg" />
+			<div class="spinner" ng-hide="ready"></div>
+			<img ng-show="ready" ng-src="{{featuredImage}}" />
 		</div><!--
-		--><div class="one-whole soft--bottom grid__item">
-			<p>With a focus on visually driven stories, Common Good is a directing collective backed by a full service design, animation and VFX studio. Common Good launched in the autumn of 2010 with the mandate of telling stories driven by the kind of stunning imagery that has been the hallmark of their work. With the skills to take an idea from concept to completion, they are able to solve the most complicated problems in beautiful and unexpected ways. Common Good is represented in Canada as a directorial collective by Radke.</p>
+		--><div ng-show="ready" class="one-whole soft--bottom grid__item" ng-bind-html="content">
+			
 		</div>	
 	</div>
 </div>
