--- a/app/themes/commongoodv2/assets/scss/atoms/_spinner.scss
+++ b/app/themes/commongoodv2/assets/scss/atoms/_spinner.scss
@@ -5,7 +5,14 @@ Spinner Component
 
 .spinner {
   display: block;
+  font-weight: $t-font-weight-bold;
+  color: $ca-spinner-color;
+
+  &.spinner--right {
+    justify-content: flex-end;
+  }
 }
+
 
 .loading {
   display: inline-block;
