--- a/app/themes/commongoodv2/assets/scss/config/_colors.scss
+++ b/app/themes/commongoodv2/assets/scss/config/_colors.scss
@@ -35,8 +35,10 @@ $ca-hamburger-line-background: $c-white;
 $ca-carousel-background: $c-black;
 $ca-site-background: $c-dark;
 $ca-nav-background: $c-dark;
+$ca-curtain-background: $c-dark;
 $ca-anchor-color: $c-light;
 $ca-anchor-hover-color: $c-white;
 $ca-paragraph-color: $c-white;
+$ca-spinner-color: $c-white;
 
 
