--- a/app/themes/commongoodv2/assets/scss/organisms/_nav.scss
+++ b/app/themes/commongoodv2/assets/scss/organisms/_nav.scss
@@ -16,50 +16,46 @@ Nav Component
   }
 }
 
-.nav__list {
-  flex-direction: column;
+.nav__inner {
 	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
 	list-style-type: none;
-	padding: 20vh 3em;
 	margin: 0;
 	background: $ca-nav-background;
 	overflow: hidden;
+  display: flex;
+  @include bp($bp-tablet) {
+    justify-content: center;
+  }
 }
 
-.menu-item {
-	padding: 0.15em;
-	transform: translate3d(-13em,0,0);
-	transition: transform 0s 0.4s;
+.nav__section {
+  padding: $d-quad;
+}
+
+.nav__list {
+  padding-top: $d-quad;
+  flex-direction: column;
+}
+
+.nav__list--works li {
+	transform: translate3d(0, 400%, 0);
+	transition: transform 0s $a-timing;
+  opacity: 0;
 
   .is-active & {
     opacity: 1;
-    transform: translate3d(0,0,0);
-    transition: opacity 0.4s 0.135s, transform 0.4s 0.135s cubic-bezier(0.645, 0.045, 0.355, 1);
+    transform: translate3d(0, 0, 0);
+    transition: all $a-timing $a-easing;
 
-    &:nth-child(2) {
-      transition-delay: 0.165s;
-    }
-
-    &:nth-child(3) {
-      transition-delay: 0.195s;
-    }
-
-    &:nth-child(4) {
-      transition-delay: 0.225s;
-    }
-  }
-
-  a {
-
-    &:hover,
-    &:focus {
-      outline: none;
+    @for $i from 0 to 30 {
+      &:nth-child(#{$i}) {
+        transition-delay: $i * 30ms;
+      }
     }
   }
 }
-
 
