--- a/app/themes/commongoodv2/assets/scss/config/_colors.scss
+++ b/app/themes/commongoodv2/assets/scss/config/_colors.scss
@@ -39,6 +39,9 @@ $ca-curtain-background: $c-dark;
 $ca-anchor-color: $c-light;
 $ca-anchor-hover-color: $c-white;
 $ca-paragraph-color: $c-white;
+$ca-list-color: $c-white;
+$ca-heading-color: $c-white;
+$ca-heading-secondary-color: $c-light;
 $ca-spinner-color: $c-white;
 
 
