--- a/app/themes/commongoodv2/assets/scss/atoms/_icon.scss
+++ b/app/themes/commongoodv2/assets/scss/atoms/_icon.scss
@@ -6,13 +6,16 @@ Icon Component
   display:inline-block;
 }
 
-
-
 .icon--logo {
   display:inline-block;
   max-width: $d-sep * 2;
 }
 
 .icon--logo-icon {
-  max-width: $d-duo;
+  max-width: $d-quad;
+}
+
+.icon--arrow-right,
+.icon--arrow-left {
+  max-width: $d-quad;
 }
