--- a/app/themes/commongoodv2/assets/scss/config/_colors.scss
+++ b/app/themes/commongoodv2/assets/scss/config/_colors.scss
@@ -36,8 +36,8 @@ $ca-carousel-background: $c-black;
 $ca-site-background: $c-dark;
 $ca-nav-background: $c-dark;
 $ca-curtain-background: $c-dark;
-$ca-anchor-color: $c-light;
-$ca-anchor-hover-color: $c-white;
+$ca-anchor-color: $c-white;
+$ca-anchor-hover-color: $c-light;
 $ca-paragraph-color: $c-white;
 $ca-list-color: $c-white;
 $ca-heading-color: $c-white;
