--- a/app/themes/commongoodv2/assets/scss/config/_dimensions.scss
+++ b/app/themes/commongoodv2/assets/scss/config/_dimensions.scss
@@ -14,6 +14,7 @@ $d-half: $d-base/2;
 $d-duo: $d-base * 2;
 $d-trio: $d-base * 3;
 $d-quad: $d-base * 4;
+$d-quin: $d-base * 5;
 $d-sex: $d-base * 6;
 $d-sep: $d-base * 7;
 $d-oct: $d-base * 8;
