--- a/app/themes/commongoodv2/assets/scss/main.scss
+++ b/app/themes/commongoodv2/assets/scss/main.scss
@@ -68,12 +68,13 @@
 @import 'organisms/header';
 @import 'organisms/footer';
 @import 'organisms/nav';
+@import 'organisms/prev-next';
 
 /**
  * Template Styles
  */
 @import 'templates/work';
-
+@import 'templates/static';
 
 
 /**
