--- a/app/themes/commongoodv2/assets/scss/typography/_paragraphs.scss
+++ b/app/themes/commongoodv2/assets/scss/typography/_paragraphs.scss
@@ -5,4 +5,10 @@ Paragraph Typography
 p,
 .p {
   color: $ca-paragraph-color;
+  margin-bottom: $d-duo;
+}
+
+.paragraph--lead > p,
+p.paragraph--lead {
+  font-size: $t-font-size-lead;
 }
