--- a/app/themes/commongoodv2/assets/scss/main.scss
+++ b/app/themes/commongoodv2/assets/scss/main.scss
@@ -29,6 +29,7 @@
 @import 'vendor/sanitize';
 @import 'vendor/barba';
 @import 'vendor/revealer';
+@import 'vendor/swiper';
 
 /**
  * Common Styles
@@ -69,6 +70,7 @@
 @import 'organisms/footer';
 @import 'organisms/nav';
 @import 'organisms/prev-next';
+@import 'organisms/featured';
 
 /**
  * Template Styles
