--- a/app/themes/commongoodv2/assets/scss/config/_colors.scss
+++ b/app/themes/commongoodv2/assets/scss/config/_colors.scss
@@ -43,5 +43,6 @@ $ca-list-color: $c-white;
 $ca-heading-color: $c-white;
 $ca-heading-secondary-color: $c-light;
 $ca-spinner-color: $c-white;
+$ca-list-sep-background: $c-white;
 
 
