--- a/app/themes/commongoodv2/assets/scss/common/_utils.scss
+++ b/app/themes/commongoodv2/assets/scss/common/_utils.scss
@@ -7,5 +7,21 @@
 }
 
 .soft-duo--bottom {
-  padding-bottom: $d-base !important;
+  padding-bottom: $d-duo !important;
+}
+
+.soft-duo--top {
+  padding-top: $d-duo !important;
+}
+
+.soft-trio--bottom {
+  padding-bottom: $d-trio !important;
+}
+
+.soft-trio--top {
+  padding-top: $d-trio !important;
+}
+
+.soft-quad--top {
+  padding-top: $d-quad !important;
 }
