--- a/app/themes/commongoodv2/assets/scss/main.scss
+++ b/app/themes/commongoodv2/assets/scss/main.scss
@@ -57,11 +57,8 @@
 @import 'atoms/spinner';
 @import 'atoms/list';
 @import 'atoms/curtain';
-
-/**
- * Molecules Styles
- */
-@import 'molecules/thumbnail';
+@import 'atoms/overlay';
+@import 'atoms/thumbnail';
 
 /**
  * Organisms Styles
