--- a/app/themes/commongoodv2/assets/scss/config/_colors.scss
+++ b/app/themes/commongoodv2/assets/scss/config/_colors.scss
@@ -44,5 +44,6 @@ $ca-heading-color: $c-white;
 $ca-heading-secondary-color: $c-light;
 $ca-spinner-color: $c-white;
 $ca-list-sep-background: $c-white;
+$ca-overlay-background: $c-black;
 
 
