--- a/app/themes/commongoodv2/assets/scss/atoms/_anchor.scss
+++ b/app/themes/commongoodv2/assets/scss/atoms/_anchor.scss
@@ -14,12 +14,12 @@ a,
   position: relative;
 
   &:hover,
-  .current-menu-item &,
+  // .current-menu-item &,
   &.is-active {
     color: $ca-anchor-hover-color;
   }
 
-  .current-menu-item &,
+  // .current-menu-item &,
   &.is-active {
     &:hover {
       color: $ca-anchor-color;
@@ -46,7 +46,7 @@ a,
   }
 
   &:hover,
-  .current-menu-item &,
+  // .current-menu-item &,
   &.is-active {
     color: $ca-anchor-color;
 
@@ -57,7 +57,7 @@ a,
     }
   }
 
-  .current-menu-item &,
+  // .current-menu-item &,
   &.is-active {
     &:hover {
       color: $ca-anchor-hover-color;
