--- a/app/themes/commongood-dev/assets/scss/atoms/_icon.scss
+++ b/app/themes/commongood-dev/assets/scss/atoms/_icon.scss
@@ -9,6 +9,10 @@ Icon Component
 .icon--logo {
   display:inline-block;
   max-width: $d-sep * 2;
+
+  .curtain__logo & {
+    max-width: $d-sep * 2.5;
+  }
 }
 
 .icon--logo-icon {
