--- a/app/themes/commongood-dev/assets/scss/atoms/_curtain.scss
+++ b/app/themes/commongood-dev/assets/scss/atoms/_curtain.scss
@@ -23,3 +23,11 @@
 	overflow: hidden;
 }
 
+.curtain__logo {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translatE(-50%, -50%);
+  opacity: 0.1;
+}
+
